tests/language_modules/17_math_module/valid/math_floor_ceil.vf
module MathFloorCeil

procedure main()
is
    let low: Integer = Math.floor(2.8)
    let high: Integer = Math.ceil(2.2)
    check low = 2
    check high = 3
end main

end MathFloorCeil