tests/language_modules/17_math_module/invalid_semantics/math_result_assignment_mismatch.vf
module MathResultAssignmentMismatch

procedure main()
is
    let result_value: Integer = Math.sin(0.0)
    check result_value = 0
end main

end MathResultAssignmentMismatch